Issue: #2 Database service verbeteren
query sanitization toevoegen, 
(de footer sticky gemaakt)

--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,7 @@
 @import "compass/css3";
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
     display: inline-block;
