Issue: #3 Nieuwe taken/ klanten toevoegen verbetern
De invoer velden  van nieuwe klanten en klussen worden gecontroleerd en pas als alles valide is worden er een nieuw object aangemaakt

--- a/css/globel.css
+++ b/css/globel.css
@@ -13,6 +13,16 @@ body{
     margin-bottom: 70px;
 }
 
+.error{
+    color: red;
+    line-height: 0;
+}
+
+.error-text{
+    color: red;
+    line-height: 1;
+}
+
 /* SOURCE: https://codepen.io/colorlib/pen/rxddKy */
 .login-page {
     width: 360px;
